# okular-backend-mupdf

./: CMakeLists.txt  README.md  document.cpp  document.hpp  generator_mupdf.cpp  generator_mupdf.hpp  libokularGenerator_mupdf.json  page.cpp  page.hpp
arch/: PKGBUILD
cmake/modules/: FindMuPDF.cmake
synctex/: synctex_parser.c  synctex_parser.h  synctex_parser_local.h  synctex_parser_utils.c  synctex_parser_utils.h
